<resources>
    <string name="app_name">MyCRUD</string>
    <string name="tvName">Nome</string>
    <string name="tvCPF">CPF</string>
    <string name="tvPhone">Telefone</string>
    <string name="bSave">Salvar</string>
    <string name="tvZipcode">CEP</string>
    <string name="fabAddStudent">Adicionar aluno</string>
    <string name="CEP_is_invalid">CEP inválido ou não encontrado</string>
    <string name="Loading_address">Buscando endereço…</string>
    <string name="search_title">Pesquisar</string>
</resources>